--- a/style/main.css
+++ b/style/main.css
@@ -54,21 +54,21 @@ h1.title {
   display: block;
   float: left; }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes move-up {
   0% {
     top: 25px;
     opacity: 1; }
   100% {
     top: -50px;
     opacity: 0; } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes move-up {
   0% {
     top: 25px;
     opacity: 1; }
   100% {
     top: -50px;
     opacity: 0; } }
-@keyframes $animation-name {
+@keyframes move-up {
   0% {
     top: 25px;
     opacity: 1; }
@@ -148,36 +148,36 @@ hr {
   width: 500px;
   margin: 0 auto; }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes fade-in {
   0% {
     opacity: 0; }
   100% {
     opacity: 1; } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes fade-in {
   0% {
     opacity: 0; }
   100% {
     opacity: 1; } }
-@keyframes $animation-name {
+@keyframes fade-in {
   0% {
     opacity: 0; }
   100% {
     opacity: 1; } }
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes slide-up {
   0% {
     margin-top: 32%; }
   100% {
-    margin-top: 20%; } }
-@-moz-keyframes $animation-name {
+    margin-top: 7%; } }
+@-moz-keyframes slide-up {
   0% {
     margin-top: 32%; }
   100% {
-    margin-top: 20%; } }
-@keyframes $animation-name {
+    margin-top: 7%; } }
+@keyframes slide-up {
   0% {
     margin-top: 32%; }
   100% {
-    margin-top: 20%; } }
+    margin-top: 7%; } }
 .game-container {
   margin-top: 40px;
   position: relative;
@@ -225,12 +225,20 @@ hr {
     display: block;
     margin-top: 29px; }
   .game-message .mailing-list {
-    margin-top: 52px; }
+    margin-top: 32px; }
     .game-message .mailing-list strong {
       display: block;
       margin-bottom: 10px; }
     .game-message .mailing-list .mailing-list-email-field {
       width: 230px;
+      margin-right: 5px; }
+  .game-message .name-input {
+    margin-top: 32px; }
+    .game-message .name-input strong {
+      display: block;
+      margin-bottom: 10px; }
+    .game-message .name-input .name-input-text {
+      width: 200px;
       margin-right: 5px; }
   .game-message a {
     display: inline-block;
@@ -264,6 +272,13 @@ hr {
       -moz-animation-fill-mode: both;
       animation-fill-mode: both; }
     .game-message.game-won .mailing-list, .game-message.game-over .mailing-list {
+      -webkit-animation: fade-in 1.5s ease-in-out 2500ms;
+      -moz-animation: fade-in 1.5s ease-in-out 2500ms;
+      animation: fade-in 1.5s ease-in-out 2500ms;
+      -webkit-animation-fill-mode: both;
+      -moz-animation-fill-mode: both;
+      animation-fill-mode: both; }
+    .game-message.game-won .name-input, .game-message.game-over .name-input {
       -webkit-animation: fade-in 1.5s ease-in-out 2500ms;
       -moz-animation: fade-in 1.5s ease-in-out 2500ms;
       animation: fade-in 1.5s ease-in-out 2500ms;
@@ -448,7 +463,7 @@ hr {
       .tile.tile-super .tile-inner {
         font-size: 10px; } }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
@@ -459,7 +474,7 @@ hr {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     transform: scale(1); } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
@@ -470,7 +485,7 @@ hr {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     transform: scale(1); } }
-@keyframes $animation-name {
+@keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
@@ -489,7 +504,7 @@ hr {
   -moz-animation-fill-mode: backwards;
   animation-fill-mode: backwards; }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
@@ -502,7 +517,7 @@ hr {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     transform: scale(1); } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
@@ -515,7 +530,7 @@ hr {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     transform: scale(1); } }
-@keyframes $animation-name {
+@keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
@@ -655,12 +670,20 @@ hr {
       display: block;
       margin-top: 29px; }
     .game-message .mailing-list {
-      margin-top: 52px; }
+      margin-top: 32px; }
       .game-message .mailing-list strong {
         display: block;
         margin-bottom: 10px; }
       .game-message .mailing-list .mailing-list-email-field {
         width: 230px;
+        margin-right: 5px; }
+    .game-message .name-input {
+      margin-top: 32px; }
+      .game-message .name-input strong {
+        display: block;
+        margin-bottom: 10px; }
+      .game-message .name-input .name-input-text {
+        width: 200px;
         margin-right: 5px; }
     .game-message a {
       display: inline-block;
@@ -694,6 +717,13 @@ hr {
         -moz-animation-fill-mode: both;
         animation-fill-mode: both; }
       .game-message.game-won .mailing-list, .game-message.game-over .mailing-list {
+        -webkit-animation: fade-in 1.5s ease-in-out 2500ms;
+        -moz-animation: fade-in 1.5s ease-in-out 2500ms;
+        animation: fade-in 1.5s ease-in-out 2500ms;
+        -webkit-animation-fill-mode: both;
+        -moz-animation-fill-mode: both;
+        animation-fill-mode: both; }
+      .game-message.game-won .name-input, .game-message.game-over .name-input {
         -webkit-animation: fade-in 1.5s ease-in-out 2500ms;
         -moz-animation: fade-in 1.5s ease-in-out 2500ms;
         animation: fade-in 1.5s ease-in-out 2500ms;
@@ -913,7 +943,7 @@ hr {
           left: 50%;
           bottom: 2px; } }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes pop-in-big {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -926,7 +956,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 30px; } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes pop-in-big {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -939,7 +969,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 30px; } }
-@keyframes $animation-name {
+@keyframes pop-in-big {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -952,7 +982,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 30px; } }
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes pop-in-small {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -965,7 +995,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 10px; } }
-@-moz-keyframes $animation-name {
+@-moz-keyframes pop-in-small {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -978,7 +1008,7 @@ hr {
     transform: scale(1) translateZ(0);
     opacity: 1;
     margin-top: 10px; } }
-@keyframes $animation-name {
+@keyframes pop-in-small {
   0% {
     -webkit-transform: scale(0) translateZ(0);
     -moz-transform: scale(0) translateZ(0);
@@ -1060,38 +1090,6 @@ hr {
   -webkit-transition-delay: 0s;
   -moz-transition-delay: 0s;
   transition-delay: 0s; }
-
-.name-input {
-  margin-top: 30px;
-  position: relative; }
-
-.name-input-left {
-  overflow: hidden; }
-  .name-input-left input {
-    display: inline-block;
-    background: #eee4da;
-    border: 1px solid #bbada0;
-    border-radius: 3px;
-    text-decoration: none;
-    color: #776E65;
-    height: 36px;
-    font-size: 18px;
-    width: 95%;
-    margin: 0; }
-
-.name-input-change {
-  display: inline-block;
-  background: #8f7a66;
-  border-radius: 3px;
-  padding: 0 20px;
-  text-decoration: none;
-  color: #f9f6f2;
-  height: 40px;
-  line-height: 42px;
-  cursor: pointer;
-  display: block;
-  text-align: center;
-  float: right; }
 
 .leaderboard {
   position: relative;
