--- a/style/main.scss
+++ b/style/main.scss
@@ -300,6 +300,7 @@ hr {
       }
     }
 
+    // COTC added
     .name-input {
       margin-top: 32px;
 
@@ -313,6 +314,7 @@ hr {
         margin-right: 5px;
       }
     }
+    // End COTC
 
     a {
       @include button;
@@ -886,13 +888,18 @@ hr {
   pre {
     font-family: "Ubuntu Mono";
     font-size: 14px;
+    font-weight: bold;
     margin: 10px; padding: 0;
     overflow: auto;
     height: 14px;
     @include transition(height 500ms);
     @include transition-delay(1s);
+    .object {
+      font-weight: normal;
+      font-size: 12px;
+    }
   }
-  span {
+  .title {
     font-size: 12px;
     position: absolute;
     background: $page-background-color;
@@ -947,3 +954,111 @@ hr {
   }
 }
 
+.social-button {
+  border-radius: 3px;
+  padding: 0;
+  text-decoration: none;
+  font-weight: normal;
+  color: $bright-text-color;
+  height: 35px;
+  line-height: 36px;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  width: 32%;
+  margin: 0 1% 0 0;
+}
+
+@include keyframes(dialog-appear) {
+  0% { transform: scale(0); }
+  80% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+
+@include keyframes(dialog-disappear) {
+  0% { transform: scale(1); }
+  40% { transform: scale(1.1); }
+  100% { transform: scale(0); }
+}
+
+.login-email-button {
+  @extend .social-button;
+  background: #a0a0a0;
+  display: none;
+}
+
+.login-facebook-button {
+  @extend .social-button;
+  background: #3b5998;
+}
+
+.login-google-button {
+  @extend .social-button;
+  background: #dd4b39;
+}
+
+.logout-button {
+  @extend .social-button;
+  background: #a01023;
+  display: none;
+}
+
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99999;
+  background: rgba(0, 0, 0, 0.5);
+  opacity:0;
+  @include transition(opacity 400ms ease-in);
+  pointer-events: none;
+  
+  input {
+    margin-bottom: 3px;
+  }
+  
+  & > div {
+    @include animation(dialog-disappear 400ms ease-out);
+
+    width: $field-width - 50px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    border-radius: 10px;
+    background: $tile-color;
+    @include smaller($mobile-threshold) {
+      width: 250px;
+      padding: 5px 10px 8px 10px;
+    }
+  }
+  
+  &:target {
+    opacity:1;
+    pointer-events: auto;
+  
+    & > div {
+      @include animation(dialog-appear 400ms ease-out);
+    }
+  }
+
+  .close {
+    background: darken($game-container-background, 30%);
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 12px;
+    box-shadow: 1px 1px 3px #000;
+    &:hover {
+      background: darken($tile-color, 20%);
+    };
+  }
+}
